First Asset Added
First Asset Added

--- a/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -118,7 +118,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=342.000 Y=58.000
-WindowSize=X=1340.000 Y=780.000
+WindowSize=X=1350.000 Y=790.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -139,7 +139,7 @@ UNR=U:/Journeyman/JMan_Team5/Team5/Content/CORE_ASSETS/ThirdPersonBP/Maps
 BRUSH=U:/Journeyman/JMan_Team5/Team5/Content/
 FBX=U:/Journeyman/JMan_Team5/Team5/Content/
 FBXAnim=U:/Journeyman/JMan_Team5/Team5/Content/
-GenericImport=U:/Journeyman/JMan_Team5/Team5/Content/
+GenericImport=U:/Journeyman/ContainerLP.FBX
 GenericExport=U:/Journeyman/JMan_Team5/Team5/Content/
 GenericOpen=U:/Journeyman/JMan_Team5/Team5/Content/
 GenericSave=U:/Journeyman/JMan_Team5/Team5/Content/
@@ -699,6 +699,8 @@ MaterialEditor.TimeStamp=2017.08.10-10.01.11
 MaterialEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2017.08.10-10.01.16
 SequencerWidgets.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2017.08.10-10.01.17
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [PluginBrowser]
 InstalledPlugins=LowEntryExtStdLib
@@ -1741,6 +1743,57 @@ Image.Performance=True
 Image.Render Transform=True
 Image.Navigation=True
 Image.Events=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Material=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.ImportSettings=True
+StaticMesh.Collision=True
+StaticMesh.Transform=True
+StaticMesh.Miscellaneous=True
+StaticMesh.Thumbnail=True
+StaticMesh.Navigation=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+Landscape.TransformCommon=True
+Landscape.LOD=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Input=True
+Landscape.Actor=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Lightmass=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Rendering=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+DocumentationActor.Help Data=True
 
 [AssetEditorToolkitTabLocation]
 /Game/CORE_ASSETS/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
@@ -1762,8 +1815,12 @@ Image.Events=True
 /Game/HARRY_GIBSON/Crosshairs.Crosshairs=0
 /Game/HARRY_GIBSON/M_Baselaser.M_Baselaser=0
 /Game/HARRY_GIBSON/BaseProjectile_BP.BaseProjectile_BP=0
+/Game/RICHARD_LANE/M_Container.M_Container=0
+/Game/RICHARD_LANE/ContainerLP.ContainerLP=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/RICHARD_LANE/M_Container.M_Container;
+RecentlyPlaced=/Game/RICHARD_LANE/ContainerLP.ContainerLP;
 RecentlyPlaced=/Game/CORE_ASSETS/Team5_CharacterBP.Team5_CharacterBP;
 RecentlyPlaced=/Game/CORE_ASSETS/AnimStarterPack/Ue4ASP_Character.Ue4ASP_Character;
 
@@ -1817,5 +1874,78 @@ PreviewAspectRatio=16:9
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
 PrimType=1
+
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[DetailCategoriesAdvanced]
+FbxImportUI.Mesh=False
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+bKeepOverlappingVertices=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
 
