--- a/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -115,10 +115,11 @@ LastLevel=/Game/CORE_ASSETS/ThirdPersonBP/Maps/TestMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/RICHARD_LANE/Groundtest.Groundtest
 
 [RootWindow]
 ScreenPosition=X=342.000 Y=58.000
-WindowSize=X=1360.000 Y=800.000
+WindowSize=X=1370.000 Y=810.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -776,6 +777,7 @@ PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Interact,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Interact,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Interact,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
 
 [DetailCategories]
 ThirdPersonCharacter_C.Default=True
@@ -1820,6 +1822,17 @@ MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
 MaterialExpressionLinearInterpolate.MaterialExpression=True
 MaterialExpressionDivide.MaterialExpressionDivide=True
 MaterialExpressionDivide.MaterialExpression=True
+MaterialExpressionPrecomputedAOMask.MaterialExpression=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.Physics=True
+WorldSettings.Rendering=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
 
 [AssetEditorToolkitTabLocation]
 /Game/CORE_ASSETS/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
@@ -1862,6 +1875,8 @@ MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
+WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
+Info="\"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
 
 [PathColor]
 /Game/CORE_ASSETS=(R=0.074200,G=0.500000,B=0.000000,A=1.000000)
