--- a/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Team5/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -31,7 +31,7 @@ PIEAlwaysOnTop=False
 StandaloneWindowPosition=(X=0,Y=0)
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
@@ -71,7 +71,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,FoliageOcclusionBounds=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1",BufferVisualizationMode="",ExposureSettings=(LogOffset=0,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/AARON_DANIELS
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -115,11 +115,13 @@ LastLevel=/Game/CORE_ASSETS/ThirdPersonBP/Maps/TestMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/CORE_ASSETS/Team5_Character.Team5_Character
+OpenAssetsAtExit=/Game/RYAN_WILLIAM_SULLIVAN/HUD.HUD
 
 [RootWindow]
-ScreenPosition=X=342.000 Y=58.000
-WindowSize=X=1460.000 Y=900.000
-InitiallyMaximized=True
+ScreenPosition=X=-555.000 Y=87.000
+WindowSize=X=1480.000 Y=920.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -135,11 +137,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=U:/Journeyman/JMan_Team5/Team5/Content/CORE_ASSETS/ThirdPersonBP/Maps
+UNR=../../../../../../Users/Ryan/Documents/Journeyman/JMan_Team5/Team5/Content/CORE_ASSETS/ThirdPersonBP/Maps
 BRUSH=U:/Journeyman/JMan_Team5/Team5/Content/
 FBX=U:/Journeyman/JMan_Team5/Team5/Content/
 FBXAnim=U:/Journeyman/JMan_Team5/Team5/Content/
-GenericImport=U:/Journeyman/ContainerLP.FBX
+GenericImport=../../../../../../Users/Ryan/Pictures/TestHB.png
 GenericExport=U:/Journeyman/JMan_Team5/Team5/Content/
 GenericOpen=U:/Journeyman/JMan_Team5/Team5/Content/
 GenericSave=U:/Journeyman/JMan_Team5/Team5/Content/
@@ -697,8 +699,8 @@ AnimationEditor.TimeStamp=2017.08.10-10.01.02
 AnimationEditor.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2017.08.10-10.01.11
 MaterialEditor.LastCompileMethod=Unknown
-SequencerWidgets.TimeStamp=2017.08.10-10.01.16
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2017.09.25-21.28.14
+SequencerWidgets.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2017.08.10-10.01.17
 StaticMeshEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2017.08.10-10.01.18
@@ -1984,6 +1986,81 @@ Fire_C.Rendering=True
 Fire_C.Replication=True
 Fire_C.Input=True
 Fire_C.Actor=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Input=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Performance=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Navigation=True
+CanvasPanel.Behavior=True
+CanvasPanel.Performance=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Navigation=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Performance=True
+ProgressBar.Render Transform=True
+ProgressBar.Navigation=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Style=True
+EditableTextBox.Appearance=True
+EditableTextBox.Behavior=True
+EditableTextBox.Performance=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Navigation=True
+EditableTextBox.Events=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Performance=True
+VerticalBox.Render Transform=True
+VerticalBox.Navigation=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+HUD_C.Appearance=True
+HUD_C.Interaction=True
+HUD_C.Input=True
+HUD_C.Designer=True
+HUD_C.Layout=True
+HUD_C.Behavior=True
+HUD_C.Performance=True
+HUD_C.Render Transform=True
+HUD_C.Navigation=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+Widget.Behavior=True
+Widget.Performance=True
+Widget.Render Transform=True
+Widget.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/CORE_ASSETS/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
@@ -2019,6 +2096,7 @@ Fire_C.Actor=True
 /Game/HARRY_GIBSON/Projectiles/Icey.Icey=0
 /Game/HARRY_GIBSON/Projectiles/FireProjectile_BP.FireProjectile_BP=0
 /Game/HARRY_GIBSON/Projectiles/Fire.Fire=0
+/Game/RYAN_WILLIAM_SULLIVAN/HUD.HUD=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/HARRY_GIBSON/BaseEnemy.BaseEnemy;
@@ -2031,13 +2109,13 @@ RecentlyPlaced=/Game/CORE_ASSETS/AnimStarterPack/Ue4ASP_Character.Ue4ASP_Charact
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.TintColor\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Appearance.FillColorAndOpacity\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PrimitiveComponent=
+SceneComponent=
 ActorComponent=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" \"Object.Lightmass.LightmassSettings.EnvironmentColor\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
@@ -2046,12 +2124,15 @@ SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DepthParam
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseProjectile_BP_C=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 Team5_Character_C=
 Character=
 Pawn=
 Icey_C=
+ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.TintColor\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Appearance.FillColorAndOpacity\" "
+Widget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.TintColor\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Appearance.FillColorAndOpacity\" "
+Visual="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.BackgroundImage.TintColor\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Appearance.FillColorAndOpacity\" "
 
 [PathColor]
 /Game/CORE_ASSETS=(R=0.074200,G=0.500000,B=0.000000,A=1.000000)
@@ -2073,13 +2154,14 @@ bUseUnsortedMenus=False
 bShowMobileStats=False
 
 [WidgetTemplatesExpanded]
-Extra=False
+Extra=True
 Input=False
 Optimization=False
 Panel=False
 Primitive=False
 Special Effects=False
 Uncategorized=False
+User Created=False
 
 [SelectionDetails]
 PreserveScaleRatio=True
